--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
   </header>
   <main>
+    <!-- About: Icons -->
     <section id="about" class="icons bg-light">
       <div class="flex-items">
         <div>
@@ -57,7 +58,28 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, quas.</p>
           </div>
         </div>
-
+      </div>
+    </section>
+    <!-- About:Solutions -->
+    <section class="solutions flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="images/people.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-primary">
+            <h4>What you are looking for</h4>
+            <h2>We provide bespoke solutions</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora reiciendis porro fuga iure quibusdam dolorum voluptatem velit maxime consectetur ipsa!
+            </p>
+            <a href="" class="btn btn-outline">
+              <i class="fas fa-chevron"></i>
+              Read More
+            </a>
+          </div>
+        </div>
       </div>
     </section>
   </main>
