--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="images/people.jpg" alt="">
+            <img src="images/home/people.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -106,6 +106,29 @@
         <div class="column">
           <img src="images/cases/cases7.jpg" alt="">
           <img src="images/cases/cases8.jpg" alt="">
+        </div>
+      </div>
+    </section>
+    
+    <!-- Blog -->
+    <section id="blog" class="blog flex-columns flex-reverse">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="images/home/blog.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-secondary">
+            <h4>April 16 2020</h4>
+            <h2>Blog Post One</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora reiciendis porro fuga iure quibusdam dolorum voluptatem velit maxime consectetur ipsa!
+            </p>
+            <a href="" class="btn btn-outline">
+              <i class="fas fa-chevron"></i>
+              Read Our Blog
+            </a>
+          </div>
         </div>
       </div>
     </section>
