--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h2>Blog Post One</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora reiciendis porro fuga iure quibusdam dolorum voluptatem velit maxime consectetur ipsa!
             </p>
-            <a href="" class="btn btn-outline">
+            <a href="blog.html" class="btn btn-outline">
               <i class="fas fa-chevron"></i>
               Read Our Blog
             </a>
