--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/utilities.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Welcome To EdgeLedger</title>
@@ -93,20 +94,61 @@
       </header>
       <div class="row">
         <div class="column">
-          <img src="images/cases/cases1.jpg" alt="">
-          <img src="images/cases/cases2.jpg" alt="">
+          <a 
+            href="images/cases/cases1.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases1.jpg" alt="">
+          </a>
+          
+          <a 
+            href="images/cases/cases2.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases2.jpg" alt="">
+          </a>
         </div>
         <div class="column">
-          <img src="images/cases/cases3.jpg" alt="">
-          <img src="images/cases/cases4.jpg" alt="">
+          <a 
+            href="images/cases/cases3.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases3.jpg" alt="">
+          </a>
+          <a 
+            href="images/cases/cases4.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases4.jpg" alt="">
+          </a>
         </div>
         <div class="column">
-          <img src="images/cases/cases5.jpg" alt="">
-          <img src="images/cases/cases6.jpg" alt="">
+          <a 
+            href="images/cases/cases5.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases5.jpg" alt="">
+          </a>
+          <a 
+            href="images/cases/cases6.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases6.jpg" alt="">
+          </a>
         </div>
         <div class="column">
-          <img src="images/cases/cases7.jpg" alt="">
-          <img src="images/cases/cases8.jpg" alt="">
+          <a 
+            href="images/cases/cases7.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases7.jpg" alt="">
+          </a>
+          <a 
+            href="images/cases/cases8.jpg" 
+            data-lightbox="cases" 
+            data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, iure!">
+            <img src="images/cases/cases8.jpg" alt="">
+          </a>
         </div>
       </div>
     </section>
@@ -202,6 +244,8 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+  <script src="js/lightbox.min.js"></script>
 
   <script>
     const navbar = document.getElementById('navbar');
